plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/headerWithoutImplForBoth/common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT]"><error descr="[NO_ACTUAL_FOR_EXPECT]">My</error></error> {

}
